--- a/public/assets/admin/css/style.scss
+++ b/public/assets/admin/css/style.scss
@@ -1,6 +1,6 @@
 :root {
-    --primary: #014f5b;
-    --primary-rgb: 1, 79, 91;
+    --primary: #7C5946;
+    // --primary-rgb: 1, 79, 91;
     --tc: #1e2022;
 }
 
@@ -110,8 +110,9 @@ html {
     padding-left: 12px !important;
     padding-right: 12px !important;
 }
+
 .navbar-vertical-content {
-    background: #014f5b;
+    background: #7C5946;
 }
 
 .form--control {
