landing page done

--- a/public/assets/landing/css/style.scss
+++ b/public/assets/landing/css/style.scss
@@ -1703,7 +1703,7 @@ input[type="checkbox"]:checked::after {
 
 .header.sticky .sticky-bg-area::after {
     border-radius: 10px;
-    background: rgba(0, 62, 71, 0.8);
+    background: #211E1D;
     -webkit-box-shadow: 5px 20px 60px -5px rgba(29, 142, 91, 0.1);
     box-shadow: 5px 20px 60px -5px rgba(29, 142, 91, 0.1);
     -webkit-backdrop-filter: blur(20px);
