--- a/public/assets/landing/css/style.css
+++ b/public/assets/landing/css/style.css
@@ -46,15 +46,19 @@
         5.3 Cart
         5.4 Chat
     ********************/
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css");
+
 :root {
-  --bs-primary: #5be0a0;
+  --bs-primary: #c9a18c;
   --bs-primary-rgb: 91, 224, 160;
   --bs-secondary: #003e47;
   --bs-secondary-rgb: 0, 62, 71;
   --primary-light: #f6f9fd;
-  --title-color: #174061;
+  --title-color: #7C5946;
   --title-color-rgb: 23, 64, 97;
-  --bs-body-color: #174061;
+  /* --bs-body-color: #174061; */
   --secondary-body-color: #d9d9d9;
   --bs-light: #f6f6f6;
   --bs-light-rgb: 246, 246, 246;
@@ -74,8 +78,8 @@
   --feature-bg-color: #f2f4f8;
   --box-shadow: 0 0.125rem 0.6rem rgba(0, 0, 0, 0.1);
   --product-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.05);
-  --bs-body-font-family: "Rubik", sans-serif;
-  --title-font: "Rubik", sans-serif;
+  --bs-body-font-family: "Poppins", sans-serif;
+  --title-font: "Poppins", sans-serif;
   --bs-body-font-weight: 400;
   --thin: 100;
   --extra-light: 200;
@@ -143,7 +147,7 @@ h6,
   font-weight: var(--semi-bold);
   line-height: var(--title-line-height);
   font-family: var(--title-font);
-  color: var(--title-color);
+  /* color: var(--title-color); */
 }
 
 h1,
@@ -1403,7 +1407,7 @@ input[type=checkbox]:checked::after {
 }
 .header.sticky .sticky-bg-area::after {
   border-radius: 10px;
-  background: rgba(0, 62, 71, 0.8);
+  background: #211E1D;
   box-shadow: 5px 20px 60px -5px rgba(29, 142, 91, 0.1);
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
